Temp popup visible on bio edit and fixed the profile page bug

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1968,12 +1968,6 @@ button:focus{
   margin-top: 10px;
 }
 
-.bio{
-  display:none;
-}
-.bio p{
-  display:block;
-}
 
 /* ================================== Media Queries ================================== */
 
